--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Common node modules locations
 /node_modules
 /wwwroot/node_modules
-
+/StandaloneWasm(failed)
 
 ### VisualStudioCode ###
 .vscode/*
